--- a/MVC_ECommerceTrgovina/appsettings.json
+++ b/MVC_ECommerceTrgovina/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-MVC_ECommerceTrgovina-C090F050-19F3-4C16-ACFA-F4EA731F1108;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost\\sqlexpress; Database=MVCSeminarECommerce; Trusted_Connection=True; MultipleActiveResultSets=true; TrustServerCertificate = true;"
   },
   "Logging": {
     "LogLevel": {
