izmjene kod registracije, prikaz kategrije u detaljima, link apija sređen...

--- a/MVC_ECommerceTrgovina/appsettings.json
+++ b/MVC_ECommerceTrgovina/appsettings.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\sqlexpress; Database=MVCSeminarECommerce; Trusted_Connection=True; MultipleActiveResultSets=true; TrustServerCertificate = true;"
   },
+  "apiUrl": "https://localhost:7174/api/Items",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
